# HuffumanCompressor

./: CMakeLists.txt  README.md  filetree.cpp  filetree.h  hufBase.cpp  hufBase.h  hufDecode.cpp  hufDecode.h  hufEncode.cpp  hufEncode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  type.h
test/文本/: OSR_mandarin_test_sentences.doc  OSR_mandarin_test_sentences.doc.huf  sample-heavy-1.xls  sample-heavy-1.xls.huf  sample1.txt  sample1.txt.huf
test/音频/WAV/: sample-15s.wav.huf  sample-3s.wav.huf  sample-9s.wav.huf  李冰冰.wav.huf  杨   颖.wav.huf  陈奕迅.wav.huf
